[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/Items/Coin/Coin.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Items/Coin/coin2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Items/Coin/coin1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Items/Coin/coin3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Items/Coin/coin4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/Items/coin.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Graphics/Sprites/Items/Coin/coin6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Sprites/Items/Coin/coin5.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.93751, 10 )

[sub_resource type="Animation" id=3]
resource_name = "destroy"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.435275, 0.965939, 1.46409 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 2.21914 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SFXDestroy:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Coin" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -8, -8, 16, 16 )
pause_animated_sprites = false
process_parent = true
physics_process_parent = true

[node name="SFXDestroy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 5.522
bus = "SFX"
[connection signal="destroy_coin" from="." to="." method="_on_Coin_destroy_coin"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
